--- a/ivy.xml
+++ b/ivy.xml
@@ -198,7 +198,9 @@
     <dependency org="org.xerial.snappy" name="snappy-java" rev="${snappy-java.version}"
       conf="compile->default;checkstyle->master"/>
     <dependency org="com.googlecode.json-simple" name="json-simple" rev="${json-simple.version}"
-      conf="compile->master;checkstyle->master"/>
+	    conf="compile->master;checkstyle->master"/>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency org="org.json" name="json" rev="20201115"/>
     <dependency org="jdiff" name="jdiff" rev="${jdiff.version}"
       conf="jdiff->default"/>
     <dependency org="xalan" name="xalan" rev="${xalan.version}"
